# hands-on-lab-agent-framework-on-azure

./: DEVELOPER-GUIDE.md  README.md
docs/: workshop.md
infra/: foundry_models.tf  providers.tf  roles.tf
src/: .env.template  lab_1.py  lab_2.py  main.py  pyproject.toml
src/models/: issue_analyzer.py
src/tools/: github_tools.py  time_per_issue_tools.py
